<resources>
    <string name="app_name">Loja Virtual</string>

    <!--chaves do arquivo do preferêcia-->
    <string name="filename_clocks">file clocks</string>
    <string name="pref_login">login</string>
    <string name="pref_password">password</string>
    <string name="pref_remember">remember</string>
    <string name="cadastrar">Crie um conta clicando aqui!. </string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="remember">Remember</string>
    <string name="entrar">Entrar</string>
    <string name="precisa_de_ajuda">Precisa de ajuda?</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="title_activity_tela_principal">Smartwacth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>