<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_degrade"
       >
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_degrade"
            android:id="@+id/layout_login"
            android:orientation="vertical"
            tools:context=".Form.FormLogin">


            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/email"
                android:textColor="@color/gray"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:drawableEnd="@drawable/ic_mail"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/senha"
                android:textColor="@color/gray"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:drawableEnd="@drawable/ic_key"
                android:autofillHints="" />

            <TextView
                android:id="@+id/mensagemErro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:theme="@style/Theme.AppCompat.Light"
                    android:text="@string/remember" />

                <Switch
                    android:id="@+id/swiRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/bt_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_button"
                android:fontFamily="sans-serif-black"
                android:text="@string/entrar"
                android:onClick="btnSigninOnClick"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/precisa_de_ajuda"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/cadastrar"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>
        <FrameLayout
            android:id="@+id/framel"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:background="@color/color_primary_dark"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/gelo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Carregando..."
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="480dp"
                android:gravity="center"
                />
        </FrameLayout>



    </FrameLayout>
</androidx.core.widget.NestedScrollView>