<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_degrade"
        android:orientation="vertical"
        android:id="@+id/layout_cadastro"
        tools:context=".Form.FormCadastro">

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="20dp"

            android:background="@drawable/edit_text"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"

            android:background="@drawable/edit_text"
            android:drawableEnd="@drawable/ic_key"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray" />
        <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_button"
            android:fontFamily="sans-serif-black"
            android:onClick="btnSigninOnClick"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/gray"
            android:textSize="18sp" />




    </LinearLayout>
</androidx.core.widget.NestedScrollView>